Apply changes from code review
Signed-off-by: Richard Bair <rbair23@users.noreply.github.com>